k8s相关组件/demo/demo.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demo-deploy
  labels:
    app: demo
spec:
  replicas: 4
  template:
    metadata:
      name: demo
      labels:
        app: demo
    spec:
      containers:
      - name: nginx-demo
        image: nginxdemos/hello
        ports:
        - containerPort: 80
      nodeSelector:
        beta.kubernetes.io/os: linux
---
