k8s相关组件/demo/demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-svc
  labels:
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: demo
