k8s相关组件/demo/demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - host: demo.ibenlai.com
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-svc
          servicePort: 80
